<resources>
    <string name="app_name">NetworkBT</string>
    <string name="Mode">Mode</string>
    <string name="Add_Object">Ajouter un objet</string>
    <string name="Add_Cnx">Ajouter une connexion</string>
    <string name="Mod_Object">Modifier un objet</string>
    <string name="Mod_Cnx">Modifier une connexion</string>
    <string name="Reini">Réinitialiser</string>
    <string name="save">Sauvegarder</string>
    <string name="load">Charger la sauvegarde</string>
    <string name="plan">Changer de plan</string>
    <string name="mail">Partager par mail</string>


    <string name="obj_title">Objet</string>
    <string name="obj_name">Nom</string>
    <string name="obj_image">Image</string>
    <string name="incomplete">Veuillez entre toutes les informations</string>
    <string name="cnx_title">Connexion</string>
    <string name="cnx_name">Nom</string>
    <string name="cnx_width">Épaisseur</string>
    <string name="color">Couleur</string>
    <string name="red">Rouge</string>
    <string name="green">Vert</string>
    <string name="blue">Bleu</string>
    <string name="yellow">Jaune</string>
    <string name="cyan">Cyan</string>
    <string name="pink">Magenta</string>
    <string name="black">Noir</string>

    <string name="obj_message">Ce nom est déjà utilisé, veuillez choisir un autre nom svp</string>
    <string name="obj_messagecnx">Une connexion entre les deux objets exite déjà</string>

    <string name="validate">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>

    <string name="PopUp">Donnez un nom !</string>
    <string name="PopuPlan">Choisissez un plan !</string>
</resources>